Added a favicon icon to the website.

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" type="text/css" href="vendor/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/mainPageStyle.css">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+
     <!-- Javascript -->
     <script type="text/javascript" src="vendor/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="vendor/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
