Fixed the issue where the chart allowed more than the max stocks in the addTable feature (it only checked correctly when performing a new search) + fixed the issue that the chart wasn't refreshing when we appended a stock and not creating a new search

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
 				   <div class="input-group">
 				      <input id="searchInput" type="text" class="form-control" placeholder="Search by stock symbol..." autofocus="autofocus" />
 				      <span class="input-group-btn">
+                <!-- FIXME - Fix - if there is no text, the search button should be disabled -->
 				        <button class="btn btn-default" type="button" onclick="search(false)" data-toggle="tooltip" title="Search">
                   <img class="search-images" src="Images/search.png">
                 </button>
