- fix bug where a chart is displayed even when there is no data (appl stock example) - fix bug when searching for 2 (or more) non-existing stocks, 2 messages (or more) appear - edited the README.md

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
 			<div id="tableContainer">
 				<h3>Table Display</h3>
 				<div id="tableContent">No Search has been made yet.</div>
+				<div id="searchMsg"></div>
 			</div>
 			<div id="saparator"></div>
 			<div id="graphContainer">
